year_3/Semester 1/AIC/pract3/input.yacc.output
Terminals unused in grammar

    FORM_J_A
    INST_FENCE
    INST_PRUEBA
    FORM_CSR_RxR
    FORM_CSR_RxI
    FORM_INM
    FORM_INM_L
    FORM_INM_S
    FORM_INM_DI
    FORM_INM_B
    FORM_INM_B_FI
    FORM_INM_B_FFI
    FORM_INM_T
    FORM_PSEUDO_R
    FORM_PSEUDO_CSRR
    FORM_PSEUDO_CSRW
    FORM_PSEUDO_CSRS
    FORM_PSEUDO_CSRC
    FORM_PSEUDO_CSRWI
    FORM_PSEUDO_CSRSI
    FORM_PSEUDO_CSRCI
    FORM_PSEUDO_FRCSR
    FORM_PSEUDO_FSCSR
    FORM_PSEUDO_FRRM
    FORM_PSEUDO_FSRM
    FORM_PSEUDO_FRFLAGS
    FORM_PSEUDO_FSFLAGS
    FORM_PSEUDO_L
    FORM_PSEUDO_S
    FORM_PSEUDO_FL
    FORM_PSEUDO_FS
    INST_RET
    INST_SYSCALL
    FORM_REG
    FORM_REG_FF
    FORM_INM_FP_L
    FORM_INM_FP_S
    FORM_FP_REG
    FORM_FP_REG_FF
    FORM_FP_REG_DF
    FORM_REG_R_FP
    FORM_REG_FP_R
    FORM_J
    FORM_J_F
    PINST_LA
    PINST_LI
    DE_PC
    FORM_INTERNAL_NOP


Grammar

    0 $accept: r_inicio $end

    1 $@1: ε

    2 r_inicio: LABEL $@1 r_linea_ensamblador
    3         | r_linea_ensamblador
    4         | ε

    5 $@2: ε

    6 r_linea_ensamblador: r_directiva NL $@2 r_inicio

    7 $@3: ε

    8 r_linea_ensamblador: r_instruccion NL $@3 r_inicio
    9                    | NL r_inicio
   10                    | r_directiva
   11                    | r_instruccion

   12 r_directiva: DE_DATA
   13            | DE_TEXT
   14            | DE_GLOBL T_ALPHANUM

   15 $@4: ε

   16 r_directiva: DE_BYTE $@4 r_lista_enteros

   17 $@5: ε

   18 r_directiva: DE_HALF $@5 r_lista_enteros

   19 $@6: ε

   20 r_directiva: DE_WORD $@6 r_lista_enteros

   21 $@7: ε

   22 r_directiva: DE_DWORD $@7 r_lista_enteros

   23 $@8: ε

   24 r_directiva: DE_FLOAT $@8 r_lista_reales

   25 $@9: ε

   26 r_directiva: DE_DOUBLE $@9 r_lista_reales
   27            | DE_SPACE T_INT_LIT
   28            | DE_ASCIIZ T_STRING

   29 $@10: ε

   30 r_directiva: DE_IREG $@10 r_valores_enteros

   31 $@11: ε

   32 r_directiva: DE_FREG $@11 r_valores_fp

   33 $@12: ε

   34 r_directiva: DE_BTB $@12 r_valores_btb

   35 $@13: ε

   36 r_lista_enteros: T_INT_LIT $@13 r_lista_enteros_cont

   37 r_lista_enteros_cont: ',' r_lista_enteros
   38                     | ε

   39 $@14: ε

   40 r_lista_reales: T_FP_LIT $@14 r_lista_reales_cont

   41 $@15: ε

   42 r_lista_reales: T_INT_LIT $@15 r_lista_reales_cont

   43 r_lista_reales_cont: ',' r_lista_reales
   44                    | ε

   45 r_offset: '+' T_INT_LIT
   46         | '-' T_INT_LIT
   47         | T_INT_LIT
   48         | ε

   49 r_indice_ireg: REG_INT '='
   50              | ε

   51 $@16: ε

   52 r_valores_enteros: r_indice_ireg T_INT_LIT $@16 r_valores_enteros_cont

   53 $@17: ε

   54 r_valores_enteros: r_indice_ireg T_ALPHANUM r_offset $@17 r_valores_enteros_cont

   55 r_valores_enteros_cont: ',' r_valores_enteros
   56                       | ε

   57 r_indice_fpreg: REG_FP '='
   58               | ε

   59 $@18: ε

   60 r_valores_fp: r_indice_fpreg T_FP_LIT $@18 r_valores_fp_cont

   61 r_valores_fp_cont: ',' r_valores_fp
   62                  | ε

   63 r_valores_btb: T_ALPHANUM r_offset '&' T_INT_LIT '&' T_ALPHANUM r_offset

   64 r_inmediato_disp: T_INT_LIT
   65                 | T_ALPHANUM
   66                 | M_HI '[' T_ALPHANUM ']'
   67                 | M_LO '[' T_ALPHANUM ']'
   68                 | M_DISP '[' T_ALPHANUM ']'

   69 r_inmediato_hi: T_INT_LIT
   70               | T_ALPHANUM
   71               | M_HI '[' T_ALPHANUM ']'
   72               | M_LO '[' T_ALPHANUM ']'
   73               | M_DISP '[' T_ALPHANUM ']'

   74 r_posicion: T_INT_LIT
   75           | T_ALPHANUM

   76 r_posicion_larga: T_INT_LIT
   77                 | T_ALPHANUM

   78 r_instruccion: FORM_PSEUDO_NOP
   79              | FORM_PSEUDO_RR REG_INT ',' REG_INT
   80              | FORM_PSEUDO_BRA REG_INT ',' r_posicion
   81              | FORM_PSEUDO_FF REG_FP ',' REG_FP
   82              | FORM_PSEUDO_J r_posicion_larga
   83              | FORM_PSEUDO_JR REG_INT
   84              | FORM_PSEUDO_RET
   85              | FORM_PSEUDO_BRRA REG_INT ',' REG_INT ',' r_posicion
   86              | FORM_PSEUDO_RRi REG_INT ',' REG_INT
   87              | FORM_PSEUDO_LI REG_INT ',' T_INT_LIT
   88              | FORM_PSEUDO_LLA REG_INT ',' T_ALPHANUM
   89              | FORM_PSEUDO_CALL T_ALPHANUM
   90              | FORM_PSEUDO_TAIL T_ALPHANUM
   91              | FORM_PSEUDO_TRAP T_INT_LIT
   92              | FORM_INT_RRI REG_INT ',' REG_INT ',' r_inmediato_disp
   93              | FORM_INT_RRSH REG_INT ',' REG_INT ',' T_INT_LIT
   94              | FORM_INT_RRR REG_INT ',' REG_INT ',' REG_INT
   95              | FORM_INT_RI REG_INT ',' r_inmediato_hi
   96              | FORM_INT_RA REG_INT ',' T_INT_LIT
   97              | FORM_J_RA REG_INT ',' r_posicion_larga
   98              | FORM_J_RRA REG_INT ',' REG_INT ',' r_posicion
   99              | FORM_INT_B_RRA REG_INT ',' REG_INT ',' r_posicion
  100              | FORM_INT_L_RSB REG_INT ',' r_inmediato_disp '(' REG_INT ')'
  101              | FORM_INT_L_RSB REG_INT ',' T_ALPHANUM
  102              | FORM_INT_S_RSB REG_INT ',' r_inmediato_disp '(' REG_INT ')'
  103              | FORM_INT_S_RSB REG_INT ',' T_ALPHANUM ',' REG_INT
  104              | FORM_INT_ECALL
  105              | FORM_INT_EBREAK
  106              | FORM_FP_FFF REG_FP ',' REG_FP ',' REG_FP
  107              | FORM_FP_FFFr REG_FP ',' REG_FP ',' REG_FP ',' FR_MODE
  108              | FORM_FP_FFFr REG_FP ',' REG_FP ',' REG_FP
  109              | FORM_FP_FFFFr REG_FP ',' REG_FP ',' REG_FP ',' REG_FP ',' FR_MODE
  110              | FORM_FP_FFFFr REG_FP ',' REG_FP ',' REG_FP ',' REG_FP
  111              | FORM_FP_FFr REG_FP ',' REG_FP ',' FR_MODE
  112              | FORM_FP_FFr REG_FP ',' REG_FP
  113              | FORM_FP_FF REG_FP ',' REG_FP
  114              | FORM_FP_FRr REG_FP ',' REG_INT ',' FR_MODE
  115              | FORM_FP_FRr REG_FP ',' REG_INT
  116              | FORM_FP_FR REG_FP ',' REG_INT
  117              | FORM_FP_RFr REG_INT ',' REG_FP ',' FR_MODE
  118              | FORM_FP_RFr REG_INT ',' REG_FP
  119              | FORM_FP_RF REG_INT ',' REG_FP
  120              | FORM_FP_RFF REG_INT ',' REG_FP ',' REG_FP
  121              | FORM_FP_L_FSB REG_FP ',' r_inmediato_disp '(' REG_INT ')'
  122              | FORM_FP_L_FSB REG_FP ',' T_INT_LIT
  123              | FORM_FP_S_FSB REG_FP ',' r_inmediato_disp '(' REG_INT ')'
  124              | FORM_FP_S_FSB REG_FP ',' T_INT_LIT ',' REG_INT
  125              | FORM_INT_RB REG_INT ',' '(' REG_INT ')'
  126              | FORM_INT_RRB REG_INT ',' REG_INT ',' '(' REG_INT ')'


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 63
    '(' (40) 100 102 121 123 125 126
    ')' (41) 100 102 121 123 125 126
    '+' (43) 45
    ',' (44) 37 43 55 61 79 80 81 85 86 87 88 92 93 94 95 96 97 98 99 100 101 102 103 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126
    '-' (45) 46
    '=' (61) 49 57
    '[' (91) 66 67 68 71 72 73
    ']' (93) 66 67 68 71 72 73
    error (256)
    NL <ivalue> (258) 6 8 9
    T_INT_LIT <ivalue> (259) 27 36 42 45 46 47 52 63 64 69 74 76 87 91 93 96 122 124
    T_FP_LIT <fvalue> (260) 40 60
    T_ALPHANUM <cvalue> (261) 14 54 63 65 66 67 68 70 71 72 73 75 77 88 89 90 101 103
    T_STRING <cvalue> (262) 28
    FR_MODE <cvalue> (263) 107 109 111 114 117
    REG_INT <ivalue> (264) 49 79 80 83 85 86 87 88 92 93 94 95 96 97 98 99 100 101 102 103 114 115 116 117 118 119 120 121 123 124 125 126
    REG_FP <ivalue> (265) 57 81 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124
    DE_DATA <ivalue> (266) 12
    DE_TEXT <ivalue> (267) 13
    DE_SPACE <ivalue> (268) 27
    DE_GLOBL <ivalue> (269) 14
    DE_IREG <ivalue> (270) 30
    DE_FREG <ivalue> (271) 32
    DE_ASCIIZ <ivalue> (272) 28
    DE_BTB <ivalue> (273) 34
    DE_BYTE <ivalue> (274) 16
    DE_HALF <ivalue> (275) 18
    DE_WORD <ivalue> (276) 20
    DE_DWORD <ivalue> (277) 22
    DE_FLOAT <ivalue> (278) 24
    DE_DOUBLE <ivalue> (279) 26
    FORM_INT_RRI <ivalue> (280) 92
    FORM_INT_RRSH <ivalue> (281) 93
    FORM_INT_RRR <ivalue> (282) 94
    FORM_INT_RA <ivalue> (283) 96
    FORM_INT_RI <ivalue> (284) 95
    FORM_J_RA <ivalue> (285) 97
    FORM_J_RRA <ivalue> (286) 98
    FORM_INT_B_RRA <ivalue> (287) 99
    FORM_J_A <ivalue> (288)
    FORM_INT_L_RSB <ivalue> (289) 100 101
    FORM_INT_S_RSB <ivalue> (290) 102 103
    FORM_INT_ECALL <ivalue> (291) 104
    FORM_INT_EBREAK <ivalue> (292) 105
    FORM_FP_FFF <ivalue> (293) 106
    FORM_FP_FFFr <ivalue> (294) 107 108
    FORM_FP_FFFFr <ivalue> (295) 109 110
    FORM_FP_FFr <ivalue> (296) 111 112
    FORM_FP_RFF <ivalue> (297) 120
    FORM_FP_RFr <ivalue> (298) 117 118
    FORM_FP_RF <ivalue> (299) 119
    FORM_FP_FR <ivalue> (300) 116
    FORM_FP_FRr <ivalue> (301) 114 115
    FORM_FP_FF <ivalue> (302) 113
    FORM_FP_L_FSB <ivalue> (303) 121 122
    FORM_FP_S_FSB <ivalue> (304) 123 124
    FORM_INT_RB <ivalue> (305) 125
    FORM_INT_RRB <ivalue> (306) 126
    INST_FENCE <ivalue> (307)
    INST_PRUEBA <ivalue> (308)
    FORM_CSR_RxR <ivalue> (309)
    FORM_CSR_RxI <ivalue> (310)
    FORM_INM <ivalue> (311)
    FORM_INM_L <ivalue> (312)
    FORM_INM_S <ivalue> (313)
    FORM_INM_DI <ivalue> (314)
    FORM_INM_B <ivalue> (315)
    FORM_INM_B_FI <ivalue> (316)
    FORM_INM_B_FFI <ivalue> (317)
    FORM_INM_T <ivalue> (318)
    FORM_PSEUDO_NOP <ivalue> (319) 78
    FORM_PSEUDO_RR <ivalue> (320) 79
    FORM_PSEUDO_BRA <ivalue> (321) 80
    FORM_PSEUDO_J <ivalue> (322) 82
    FORM_PSEUDO_JR <ivalue> (323) 83
    FORM_PSEUDO_RET <ivalue> (324) 84
    FORM_PSEUDO_TAIL <ivalue> (325) 90
    FORM_PSEUDO_R <ivalue> (326)
    FORM_PSEUDO_CSRR <ivalue> (327)
    FORM_PSEUDO_CSRW <ivalue> (328)
    FORM_PSEUDO_CSRS <ivalue> (329)
    FORM_PSEUDO_CSRC <ivalue> (330)
    FORM_PSEUDO_CSRWI <ivalue> (331)
    FORM_PSEUDO_CSRSI <ivalue> (332)
    FORM_PSEUDO_CSRCI <ivalue> (333)
    FORM_PSEUDO_FRCSR <ivalue> (334)
    FORM_PSEUDO_FSCSR <ivalue> (335)
    FORM_PSEUDO_FRRM <ivalue> (336)
    FORM_PSEUDO_FSRM <ivalue> (337)
    FORM_PSEUDO_FRFLAGS <ivalue> (338)
    FORM_PSEUDO_FSFLAGS <ivalue> (339)
    FORM_PSEUDO_BRRA <ivalue> (340) 85
    FORM_PSEUDO_RRi <ivalue> (341) 86
    FORM_PSEUDO_FF <ivalue> (342) 81
    FORM_PSEUDO_LLA <ivalue> (343) 88
    FORM_PSEUDO_L <ivalue> (344)
    FORM_PSEUDO_S <ivalue> (345)
    FORM_PSEUDO_FL <ivalue> (346)
    FORM_PSEUDO_FS <ivalue> (347)
    FORM_PSEUDO_LI <ivalue> (348) 87
    FORM_PSEUDO_CALL <ivalue> (349) 89
    FORM_PSEUDO_TRAP <ivalue> (350) 91
    INST_RET <ivalue> (351)
    INST_SYSCALL <ivalue> (352)
    FORM_REG <ivalue> (353)
    FORM_REG_FF <ivalue> (354)
    FORM_INM_FP_L <ivalue> (355)
    FORM_INM_FP_S <ivalue> (356)
    FORM_FP_REG <ivalue> (357)
    FORM_FP_REG_FF <ivalue> (358)
    FORM_FP_REG_DF <ivalue> (359)
    FORM_REG_R_FP <ivalue> (360)
    FORM_REG_FP_R <ivalue> (361)
    FORM_J <ivalue> (362)
    FORM_J_F <ivalue> (363)
    LABEL <cvalue> (364) 2
    PINST_LA <ivalue> (365)
    PINST_LI <ivalue> (366)
    M_LO <ivalue> (367) 67 72
    M_HI <ivalue> (368) 66 71
    M_DISP <ivalue> (369) 68 73
    DE_PC <ivalue> (370)
    FORM_INTERNAL_NOP <ivalue> (371)


Nonterminals, with rules where they appear

    $accept (126)
        on left: 0
    r_inicio (127)
        on left: 2 3 4
        on right: 0 6 8 9
    $@1 (128)
        on left: 1
        on right: 2
    r_linea_ensamblador (129)
        on left: 6 8 9 10 11
        on right: 2 3
    $@2 (130)
        on left: 5
        on right: 6
    $@3 (131)
        on left: 7
        on right: 8
    r_directiva (132)
        on left: 12 13 14 16 18 20 22 24 26 27 28 30 32 34
        on right: 6 10
    $@4 (133)
        on left: 15
        on right: 16
    $@5 (134)
        on left: 17
        on right: 18
    $@6 (135)
        on left: 19
        on right: 20
    $@7 (136)
        on left: 21
        on right: 22
    $@8 (137)
        on left: 23
        on right: 24
    $@9 (138)
        on left: 25
        on right: 26
    $@10 (139)
        on left: 29
        on right: 30
    $@11 (140)
        on left: 31
        on right: 32
    $@12 (141)
        on left: 33
        on right: 34
    r_lista_enteros (142)
        on left: 36
        on right: 16 18 20 22 37
    $@13 (143)
        on left: 35
        on right: 36
    r_lista_enteros_cont (144)
        on left: 37 38
        on right: 36
    r_lista_reales (145)
        on left: 40 42
        on right: 24 26 43
    $@14 (146)
        on left: 39
        on right: 40
    $@15 (147)
        on left: 41
        on right: 42
    r_lista_reales_cont (148)
        on left: 43 44
        on right: 40 42
    r_offset <ivalue> (149)
        on left: 45 46 47 48
        on right: 54 63
    r_indice_ireg (150)
        on left: 49 50
        on right: 52 54
    r_valores_enteros (151)
        on left: 52 54
        on right: 30 55
    $@16 (152)
        on left: 51
        on right: 52
    $@17 (153)
        on left: 53
        on right: 54
    r_valores_enteros_cont (154)
        on left: 55 56
        on right: 52 54
    r_indice_fpreg (155)
        on left: 57 58
        on right: 60
    r_valores_fp (156)
        on left: 60
        on right: 32 61
    $@18 (157)
        on left: 59
        on right: 60
    r_valores_fp_cont (158)
        on left: 61 62
        on right: 60
    r_valores_btb (159)
        on left: 63
        on right: 34
    r_inmediato_disp <ivalue> (160)
        on left: 64 65 66 67 68
        on right: 92 100 102 121 123
    r_inmediato_hi <ivalue> (161)
        on left: 69 70 71 72 73
        on right: 95
    r_posicion <ivalue> (162)
        on left: 74 75
        on right: 80 85 98 99
    r_posicion_larga <ivalue> (163)
        on left: 76 77
        on right: 82 97
    r_instruccion (164)
        on left: 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126
        on right: 8 11


State 0

    0 $accept: • r_inicio $end

    NL                shift, and go to state 1
    DE_DATA           shift, and go to state 2
    DE_TEXT           shift, and go to state 3
    DE_SPACE          shift, and go to state 4
    DE_GLOBL          shift, and go to state 5
    DE_IREG           shift, and go to state 6
    DE_FREG           shift, and go to state 7
    DE_ASCIIZ         shift, and go to state 8
    DE_BTB            shift, and go to state 9
    DE_BYTE           shift, and go to state 10
    DE_HALF           shift, and go to state 11
    DE_WORD           shift, and go to state 12
    DE_DWORD          shift, and go to state 13
    DE_FLOAT          shift, and go to state 14
    DE_DOUBLE         shift, and go to state 15
    FORM_INT_RRI      shift, and go to state 16
    FORM_INT_RRSH     shift, and go to state 17
    FORM_INT_RRR      shift, and go to state 18
    FORM_INT_RA       shift, and go to state 19
    FORM_INT_RI       shift, and go to state 20
    FORM_J_RA         shift, and go to state 21
    FORM_J_RRA        shift, and go to state 22
    FORM_INT_B_RRA    shift, and go to state 23
    FORM_INT_L_RSB    shift, and go to state 24
    FORM_INT_S_RSB    shift, and go to state 25
    FORM_INT_ECALL    shift, and go to state 26
    FORM_INT_EBREAK   shift, and go to state 27
    FORM_FP_FFF       shift, and go to state 28
    FORM_FP_FFFr      shift, and go to state 29
    FORM_FP_FFFFr     shift, and go to state 30
    FORM_FP_FFr       shift, and go to state 31
    FORM_FP_RFF       shift, and go to state 32
    FORM_FP_RFr       shift, and go to state 33
    FORM_FP_RF        shift, and go to state 34
    FORM_FP_FR        shift, and go to state 35
    FORM_FP_FRr       shift, and go to state 36
    FORM_FP_FF        shift, and go to state 37
    FORM_FP_L_FSB     shift, and go to state 38
    FORM_FP_S_FSB     shift, and go to state 39
    FORM_INT_RB       shift, and go to state 40
    FORM_INT_RRB      shift, and go to state 41
    FORM_PSEUDO_NOP   shift, and go to state 42
    FORM_PSEUDO_RR    shift, and go to state 43
    FORM_PSEUDO_BRA   shift, and go to state 44
    FORM_PSEUDO_J     shift, and go to state 45
    FORM_PSEUDO_JR    shift, and go to state 46
    FORM_PSEUDO_RET   shift, and go to state 47
    FORM_PSEUDO_TAIL  shift, and go to state 48
    FORM_PSEUDO_BRRA  shift, and go to state 49
    FORM_PSEUDO_RRi   shift, and go to state 50
    FORM_PSEUDO_FF    shift, and go to state 51
    FORM_PSEUDO_LLA   shift, and go to state 52
    FORM_PSEUDO_LI    shift, and go to state 53
    FORM_PSEUDO_CALL  shift, and go to state 54
    FORM_PSEUDO_TRAP  shift, and go to state 55
    LABEL             shift, and go to state 56

    $default  reduce using rule 4 (r_inicio)

    r_inicio             go to state 57
    r_linea_ensamblador  go to state 58
    r_directiva          go to state 59
    r_instruccion        go to state 60


State 1

    9 r_linea_ensamblador: NL • r_inicio

    NL                shift, and go to state 1
    DE_DATA           shift, and go to state 2
    DE_TEXT           shift, and go to state 3
    DE_SPACE          shift, and go to state 4
    DE_GLOBL          shift, and go to state 5
    DE_IREG           shift, and go to state 6
    DE_FREG           shift, and go to state 7
    DE_ASCIIZ         shift, and go to state 8
    DE_BTB            shift, and go to state 9
    DE_BYTE           shift, and go to state 10
    DE_HALF           shift, and go to state 11
    DE_WORD           shift, and go to state 12
    DE_DWORD          shift, and go to state 13
    DE_FLOAT          shift, and go to state 14
    DE_DOUBLE         shift, and go to state 15
    FORM_INT_RRI      shift, and go to state 16
    FORM_INT_RRSH     shift, and go to state 17
    FORM_INT_RRR      shift, and go to state 18
    FORM_INT_RA       shift, and go to state 19
    FORM_INT_RI       shift, and go to state 20
    FORM_J_RA         shift, and go to state 21
    FORM_J_RRA        shift, and go to state 22
    FORM_INT_B_RRA    shift, and go to state 23
    FORM_INT_L_RSB    shift, and go to state 24
    FORM_INT_S_RSB    shift, and go to state 25
    FORM_INT_ECALL    shift, and go to state 26
    FORM_INT_EBREAK   shift, and go to state 27
    FORM_FP_FFF       shift, and go to state 28
    FORM_FP_FFFr      shift, and go to state 29
    FORM_FP_FFFFr     shift, and go to state 30
    FORM_FP_FFr       shift, and go to state 31
    FORM_FP_RFF       shift, and go to state 32
    FORM_FP_RFr       shift, and go to state 33
    FORM_FP_RF        shift, and go to state 34
    FORM_FP_FR        shift, and go to state 35
    FORM_FP_FRr       shift, and go to state 36
    FORM_FP_FF        shift, and go to state 37
    FORM_FP_L_FSB     shift, and go to state 38
    FORM_FP_S_FSB     shift, and go to state 39
    FORM_INT_RB       shift, and go to state 40
    FORM_INT_RRB      shift, and go to state 41
    FORM_PSEUDO_NOP   shift, and go to state 42
    FORM_PSEUDO_RR    shift, and go to state 43
    FORM_PSEUDO_BRA   shift, and go to state 44
    FORM_PSEUDO_J     shift, and go to state 45
    FORM_PSEUDO_JR    shift, and go to state 46
    FORM_PSEUDO_RET   shift, and go to state 47
    FORM_PSEUDO_TAIL  shift, and go to state 48
    FORM_PSEUDO_BRRA  shift, and go to state 49
    FORM_PSEUDO_RRi   shift, and go to state 50
    FORM_PSEUDO_FF    shift, and go to state 51
    FORM_PSEUDO_LLA   shift, and go to state 52
    FORM_PSEUDO_LI    shift, and go to state 53
    FORM_PSEUDO_CALL  shift, and go to state 54
    FORM_PSEUDO_TRAP  shift, and go to state 55
    LABEL             shift, and go to state 56

    $default  reduce using rule 4 (r_inicio)

    r_inicio             go to state 61
    r_linea_ensamblador  go to state 58
    r_directiva          go to state 59
    r_instruccion        go to state 60


State 2

   12 r_directiva: DE_DATA •

    $default  reduce using rule 12 (r_directiva)


State 3

   13 r_directiva: DE_TEXT •

    $default  reduce using rule 13 (r_directiva)


State 4

   27 r_directiva: DE_SPACE • T_INT_LIT

    T_INT_LIT  shift, and go to state 62


State 5

   14 r_directiva: DE_GLOBL • T_ALPHANUM

    T_ALPHANUM  shift, and go to state 63


State 6

   30 r_directiva: DE_IREG • $@10 r_valores_enteros

    $default  reduce using rule 29 ($@10)

    $@10  go to state 64


State 7

   32 r_directiva: DE_FREG • $@11 r_valores_fp

    $default  reduce using rule 31 ($@11)

    $@11  go to state 65


State 8

   28 r_directiva: DE_ASCIIZ • T_STRING

    T_STRING  shift, and go to state 66


State 9

   34 r_directiva: DE_BTB • $@12 r_valores_btb

    $default  reduce using rule 33 ($@12)

    $@12  go to state 67


State 10

   16 r_directiva: DE_BYTE • $@4 r_lista_enteros

    $default  reduce using rule 15 ($@4)

    $@4  go to state 68


State 11

   18 r_directiva: DE_HALF • $@5 r_lista_enteros

    $default  reduce using rule 17 ($@5)

    $@5  go to state 69


State 12

   20 r_directiva: DE_WORD • $@6 r_lista_enteros

    $default  reduce using rule 19 ($@6)

    $@6  go to state 70


State 13

   22 r_directiva: DE_DWORD • $@7 r_lista_enteros

    $default  reduce using rule 21 ($@7)

    $@7  go to state 71


State 14

   24 r_directiva: DE_FLOAT • $@8 r_lista_reales

    $default  reduce using rule 23 ($@8)

    $@8  go to state 72


State 15

   26 r_directiva: DE_DOUBLE • $@9 r_lista_reales

    $default  reduce using rule 25 ($@9)

    $@9  go to state 73


State 16

   92 r_instruccion: FORM_INT_RRI • REG_INT ',' REG_INT ',' r_inmediato_disp

    REG_INT  shift, and go to state 74


State 17

   93 r_instruccion: FORM_INT_RRSH • REG_INT ',' REG_INT ',' T_INT_LIT

    REG_INT  shift, and go to state 75


State 18

   94 r_instruccion: FORM_INT_RRR • REG_INT ',' REG_INT ',' REG_INT

    REG_INT  shift, and go to state 76


State 19

   96 r_instruccion: FORM_INT_RA • REG_INT ',' T_INT_LIT

    REG_INT  shift, and go to state 77


State 20

   95 r_instruccion: FORM_INT_RI • REG_INT ',' r_inmediato_hi

    REG_INT  shift, and go to state 78


State 21

   97 r_instruccion: FORM_J_RA • REG_INT ',' r_posicion_larga

    REG_INT  shift, and go to state 79


State 22

   98 r_instruccion: FORM_J_RRA • REG_INT ',' REG_INT ',' r_posicion

    REG_INT  shift, and go to state 80


State 23

   99 r_instruccion: FORM_INT_B_RRA • REG_INT ',' REG_INT ',' r_posicion

    REG_INT  shift, and go to state 81


State 24

  100 r_instruccion: FORM_INT_L_RSB • REG_INT ',' r_inmediato_disp '(' REG_INT ')'
  101              | FORM_INT_L_RSB • REG_INT ',' T_ALPHANUM

    REG_INT  shift, and go to state 82


State 25

  102 r_instruccion: FORM_INT_S_RSB • REG_INT ',' r_inmediato_disp '(' REG_INT ')'
  103              | FORM_INT_S_RSB • REG_INT ',' T_ALPHANUM ',' REG_INT

    REG_INT  shift, and go to state 83


State 26

  104 r_instruccion: FORM_INT_ECALL •

    $default  reduce using rule 104 (r_instruccion)


State 27

  105 r_instruccion: FORM_INT_EBREAK •

    $default  reduce using rule 105 (r_instruccion)


State 28

  106 r_instruccion: FORM_FP_FFF • REG_FP ',' REG_FP ',' REG_FP

    REG_FP  shift, and go to state 84


State 29

  107 r_instruccion: FORM_FP_FFFr • REG_FP ',' REG_FP ',' REG_FP ',' FR_MODE
  108              | FORM_FP_FFFr • REG_FP ',' REG_FP ',' REG_FP

    REG_FP  shift, and go to state 85


State 30

  109 r_instruccion: FORM_FP_FFFFr • REG_FP ',' REG_FP ',' REG_FP ',' REG_FP ',' FR_MODE
  110              | FORM_FP_FFFFr • REG_FP ',' REG_FP ',' REG_FP ',' REG_FP

    REG_FP  shift, and go to state 86


State 31

  111 r_instruccion: FORM_FP_FFr • REG_FP ',' REG_FP ',' FR_MODE
  112              | FORM_FP_FFr • REG_FP ',' REG_FP

    REG_FP  shift, and go to state 87


State 32

  120 r_instruccion: FORM_FP_RFF • REG_INT ',' REG_FP ',' REG_FP

    REG_INT  shift, and go to state 88


State 33

  117 r_instruccion: FORM_FP_RFr • REG_INT ',' REG_FP ',' FR_MODE
  118              | FORM_FP_RFr • REG_INT ',' REG_FP

    REG_INT  shift, and go to state 89


State 34

  119 r_instruccion: FORM_FP_RF • REG_INT ',' REG_FP

    REG_INT  shift, and go to state 90


State 35

  116 r_instruccion: FORM_FP_FR • REG_FP ',' REG_INT

    REG_FP  shift, and go to state 91


State 36

  114 r_instruccion: FORM_FP_FRr • REG_FP ',' REG_INT ',' FR_MODE
  115              | FORM_FP_FRr • REG_FP ',' REG_INT

    REG_FP  shift, and go to state 92


State 37

  113 r_instruccion: FORM_FP_FF • REG_FP ',' REG_FP

    REG_FP  shift, and go to state 93


State 38

  121 r_instruccion: FORM_FP_L_FSB • REG_FP ',' r_inmediato_disp '(' REG_INT ')'
  122              | FORM_FP_L_FSB • REG_FP ',' T_INT_LIT

    REG_FP  shift, and go to state 94


State 39

  123 r_instruccion: FORM_FP_S_FSB • REG_FP ',' r_inmediato_disp '(' REG_INT ')'
  124              | FORM_FP_S_FSB • REG_FP ',' T_INT_LIT ',' REG_INT

    REG_FP  shift, and go to state 95


State 40

  125 r_instruccion: FORM_INT_RB • REG_INT ',' '(' REG_INT ')'

    REG_INT  shift, and go to state 96


State 41

  126 r_instruccion: FORM_INT_RRB • REG_INT ',' REG_INT ',' '(' REG_INT ')'

    REG_INT  shift, and go to state 97


State 42

   78 r_instruccion: FORM_PSEUDO_NOP •

    $default  reduce using rule 78 (r_instruccion)


State 43

   79 r_instruccion: FORM_PSEUDO_RR • REG_INT ',' REG_INT

    REG_INT  shift, and go to state 98


State 44

   80 r_instruccion: FORM_PSEUDO_BRA • REG_INT ',' r_posicion

    REG_INT  shift, and go to state 99


State 45

   82 r_instruccion: FORM_PSEUDO_J • r_posicion_larga

    T_INT_LIT   shift, and go to state 100
    T_ALPHANUM  shift, and go to state 101

    r_posicion_larga  go to state 102


State 46

   83 r_instruccion: FORM_PSEUDO_JR • REG_INT

    REG_INT  shift, and go to state 103


State 47

   84 r_instruccion: FORM_PSEUDO_RET •

    $default  reduce using rule 84 (r_instruccion)


State 48

   90 r_instruccion: FORM_PSEUDO_TAIL • T_ALPHANUM

    T_ALPHANUM  shift, and go to state 104


State 49

   85 r_instruccion: FORM_PSEUDO_BRRA • REG_INT ',' REG_INT ',' r_posicion

    REG_INT  shift, and go to state 105


State 50

   86 r_instruccion: FORM_PSEUDO_RRi • REG_INT ',' REG_INT

    REG_INT  shift, and go to state 106


State 51

   81 r_instruccion: FORM_PSEUDO_FF • REG_FP ',' REG_FP

    REG_FP  shift, and go to state 107


State 52

   88 r_instruccion: FORM_PSEUDO_LLA • REG_INT ',' T_ALPHANUM

    REG_INT  shift, and go to state 108


State 53

   87 r_instruccion: FORM_PSEUDO_LI • REG_INT ',' T_INT_LIT

    REG_INT  shift, and go to state 109


State 54

   89 r_instruccion: FORM_PSEUDO_CALL • T_ALPHANUM

    T_ALPHANUM  shift, and go to state 110


State 55

   91 r_instruccion: FORM_PSEUDO_TRAP • T_INT_LIT

    T_INT_LIT  shift, and go to state 111


State 56

    2 r_inicio: LABEL • $@1 r_linea_ensamblador

    $default  reduce using rule 1 ($@1)

    $@1  go to state 112


State 57

    0 $accept: r_inicio • $end

    $end  shift, and go to state 113


State 58

    3 r_inicio: r_linea_ensamblador •

    $default  reduce using rule 3 (r_inicio)


State 59

    6 r_linea_ensamblador: r_directiva • NL $@2 r_inicio
   10                    | r_directiva •

    NL  shift, and go to state 114

    $default  reduce using rule 10 (r_linea_ensamblador)


State 60

    8 r_linea_ensamblador: r_instruccion • NL $@3 r_inicio
   11                    | r_instruccion •

    NL  shift, and go to state 115
